Source/WebKitLegacy/mac/WebView/WebHTMLView.mm
@@ -7154,11 +7154,13 @@ static void extractUnderlines(NSAttributedString *string, Vector<CompositionUnde
     _private->softSpaceRange = NSMakeRange(NSNotFound, 0);
 #endif
 
+    bool replacesText = false;
     if (replacementRange.location != NSNotFound) {
         WebRangeIsRelativeTo rangeIsRelativeTo = needToRemoveSoftSpace ? WebRangeIsRelativeTo::Paragraph : WebRangeIsRelativeTo::EditableRoot;
-        RefPtr<Range> domRange = [[self _frame] _convertToDOMRange:replacementRange rangeIsRelativeTo:rangeIsRelativeTo];
-        if (domRange)
+        if (auto domRange = [[self _frame] _convertToDOMRange:replacementRange rangeIsRelativeTo:rangeIsRelativeTo]) {
             coreFrame->selection().setSelection(VisibleSelection(*domRange, SEL_DEFAULT_AFFINITY));
+            replacesText = replacementRange.length;
+        }
     }
 
     bool eventHandled = false;
@@ -7171,7 +7173,7 @@ static void extractUnderlines(NSAttributedString *string, Vector<CompositionUnde
         if (!dictationAlternativeLocations.isEmpty())
             eventHandled = coreFrame->editor().insertDictatedText(eventText, dictationAlternativeLocations, event);
         else
-            eventHandled = coreFrame->editor().insertText(eventText, event);
+            eventHandled = coreFrame->editor().insertText(eventText, event, replacesText ? TextEventInputAutocompletion : TextEventInputKeyboard);
         
 #if USE(INSERTION_UNDO_GROUPING)
         if (registerUndoGroup)
